--- a/thesis/webar-lambda-watermeinsert/package.json
+++ b/thesis/webar-lambda-watermeinsert/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.199.0",
     "@aws-sdk/lib-dynamodb": "^3.199.0"
