--- a/thesis/webar-lambda-watermeselect/package.json
+++ b/thesis/webar-lambda-watermeselect/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "kristen.phan@accenture.com",
   "license": "ISC",
   "type": "module",
   "dependencies": {
