--- a/thesis/threejs-frontend/package.json
+++ b/thesis/threejs-frontend/package.json
@@ -5,6 +5,7 @@
     "start": "webpack serve"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "three": "^0.136.0"
   },
   "devDependencies": {
